--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,102 @@
   </head>
   
   <body>
-    
+    <header>
+      <img alt="Header Logo">
+      <div class="head_links">
+        <a>header link 1</a>
+        <a>header link 2</a>
+        <a>header link 3</a>
+      </div>
+    </header>
+
+    <div class="main">
+      <div class="intro">
+        <div class="text">
+          <p class="hero_main">This website is awesome</p>
+          <p class="hero_second">
+            This website has some subtext that goes 
+            here under the main title. It's a smaller font 
+            and the color is lower contrast
+          </p>
+          <button>
+            Sign up
+          </button>
+        </div>
+        <div class="image">
+          <div class="box">
+            <img alt="Hero Image">
+          </div> 
+        </div>
+      </div>
+      <div class="content">
+        <p class="header">
+          Some random information
+        </p>
+        <div class="content_boxes">
+          <div class="content_box">
+            <div class="content_image">
+              <img alt="Image">
+            </div>
+            <p>
+              this is some subtext under an illustration or image
+            </p>
+          </div>
+          <div class="content_box">
+            <div class="content_image">
+              <img alt="Image">
+            </div>
+            <p>
+              this is some subtext under an illustration or image
+            </p>
+          </div>
+          <div class="content_box">
+            <div class="content_image">
+              <img alt="Image">
+            </div>
+            <p>
+              this is some subtext under an illustration or image
+            </p>
+          </div>
+          <div class="content_box">
+            <div class="content_image">
+              <img alt="Image">
+            </div>
+            <p>
+              this is some subtext under an illustration or image
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="quote">
+        <p class="quote_text">
+          This is an inspiring quote, or a testimonial from
+          a customer. Maybe it's just filling up space or
+          maybe people will actually read it. Who knows?
+          All I know is that it looks nice.
+        </p>
+        <p class="quote_auth">
+          -Thor, God of Thunder
+        </p>
+      </div>
+      <div class="call">
+        <div class="box">
+          <div class="text">
+            <p class="header">Call to action! It's time!</p>
+            <p>
+              Sign up for our product by clicking that
+              button right over there!
+            </p>
+          </div>
+          <button>
+            Sign up
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      Copyright &copy The Odin Project 2021
+    </footer>
   </body>
 </html>
