Made header links direct to main page, fixed header link styling.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   
   <body>
     <header>
-      <img alt="Header Logo">
+      <a href="index.html">
+        <img alt="Header Logo">
+      </a>
       <div class="head_links">
-        <a>header link 1</a>
-        <a>header link 2</a>
-        <a>header link 3</a>
+        <a href="index.html">header link 1</a>
+        <a href="index.html">header link 2</a>
+        <a href="index.html">header link 3</a>
       </div>
     </header>
 
